fix: rename autoCollapse to autocollapse for Sidebar

--- a/packages/veui-theme-dls/components/sidebar.less
+++ b/packages/veui-theme-dls/components/sidebar.less
@@ -33,10 +33,7 @@
     flex: none;
     background: @dls-layout-sidebar-background-color;
     z-index: 1;
-
-    &-extra {
-      flex: auto;
-    }
+    flex-direction: row-reverse;
 
     &-inside {
       flex: none;
